[package]
name = "pink_cute_rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"

[lib]
crate-type = ["cdylib"]

[dependencies]
quest_hook = { git = "https://github.com/Fernthedev/quest-hook-rs.git", features = ["il2cpp_v31"], branch = "cordl-fixes"}
# quest_hook = { path = "../quest-hook-rs", features = ["il2cpp_v31"]}
tracing = "*"
# bs_cordl = { path = "./codegen-rs", features = [
bs_cordl = { git = "https://github.com/QuestPackageManager/bs-cordl-rust.git", features = [
"UnityEngine+GameObject",
"UnityEngine+Color",
"MainMenuViewController",
"TMPro+TextMeshPro",
"BeatmapDataItem",
"IReadonlyBeatmapData"
]}

[build-dependencies]
cc = "1.0"

[workspace]

members = [
    # "bs_cordl",
]